all operators work in the calculator (except negative), numbers no longer overflow out of screen

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ button{
     width: 100%;
     border: solid black;
     background: #e3d1b5;
+    overflow: hidden;
 }
 #display span{
     padding-right: 5px;
